Add Delete Movie Feature for admin.